# sonic

./: .gitignore  Cargo.toml  GUIDE.md  LICENSE.md  README.md
.github/workflows/: ci.yml  release-artifacts.yml
examples/c/: probe_and_transcode_buffer.c  transcode_directory.c  transcode_file.c
include/: sonic_ffi.h
scripts/: bench_ffmpeg_folder.sh  build-linux-arm64-docker.sh
src/: batch.rs  config.rs  errors.rs  ffi.rs  lib.rs  main.rs
src/audio/: detect.rs  m4a.rs  metadata.rs  mod.rs  output.rs  preset.rs  probe.rs  transcoder.rs
src/ffi/: convert.rs  support.rs  types.rs
src/http/: handlers.rs
