[package]
name = "sonic-transcoder"
version = "0.1.0"
edition = "2021"

[lib]
name = "sonic_transcoder"
crate-type = ["rlib", "cdylib"]

[dependencies]
thiserror = "2"
id3 = "1.16"
minimp3 = "0.6"
hound = "3.5"
claxon = "0.4"
mp3lame-encoder = "0.2"

# Keep FDK optional at scaffold stage; enable with --features aac-fdk
fdk-aac = { version = "0.8", optional = true }

[features]
default = []
aac-fdk = ["dep:fdk-aac"]
